@@ -48,6 +48,7 @@
 		#define BLUETOOTH_SIGNAL_CONNECTION_RESPONSE     0x03
 		#define BLUETOOTH_SIGNAL_CONFIGURATION_REQUEST   0x04
 		#define BLUETOOTH_SIGNAL_CONFIGURATION_RESPONSE  0x05
+		#define BLUETOOTH_SIGNAL_INFORMATION_REQUEST     0x0A
 		
 		#define BLUETOOTH_CONNECTION_SUCCESSFUL          0x0000
 		#define BLUETOOTH_CONNECTION_REFUSED_RESOURCES   0x0004
